--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,24 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+.classpath
+.idea
+.project
+.metadata
+.settings
+META-INF/
+classpath
+bin/
+logs/
+target/
+test-output/
+out/
+
+build/
+.gradle
+*.iml
+*.ipr
+*.iws
+*.springBeans
+**/*/webapp/swagger/
