Edit room and service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # Details for our datasource
-spring.datasource.url=jdbc:postgresql://54.93.65.5:5432/andreeasauchea
-spring.datasource.username=fasttrackit_dev
-spring.datasource.password=fasttrackit_dev
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/hotel
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 
 # Hibernate properties
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQL94Dialect
